Port to 1.20.6
- Port to 1.20.6
- Move compatibility code into individual classes